2000-09-26	Christian Gilmore <cgilmore@tivoli.com>

	o  Made first public release 0.02

$Id: ChangeLog,v 1.1 2000/09/26 20:11:50 cgilmore Exp $