@@ -1,5 +1,9 @@
+2001-01-08	Christian Gilmore <cgilmore@tivoli.com>
+
+	o  Better handled pre-1.26 set_handlers bugs
+	
 2000-09-26	Christian Gilmore <cgilmore@tivoli.com>
 
 	o  Made first public release 0.02
 
-$Id: ChangeLog,v 1.1 2000/09/26 20:11:50 cgilmore Exp $
+$Id: ChangeLog,v 1.2 2001/01/08 17:41:17 cgilmore Exp $
